Fixed scrolling issue with index list items to scroll list instead of whole page, fixed issue where text in attraction item jumped out of box.

--- a/frontend/src/styles/components/attraction_index.scss
+++ b/frontend/src/styles/components/attraction_index.scss
@@ -6,15 +6,18 @@
 }
 
 
+.attractions-scroll {
+  overflow: auto;
+  max-height: 800px;
+  padding-right: 20px;
+}
 
 
-.attractionsListings { 
+
+
+.attractions-listing { 
   margin-top: 175px;
-  display: flex;
-  position: relative;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  flex-direction: column; 
+  
   width: 90%;
 
   div {
@@ -27,6 +30,10 @@
     background-color: $MediumPurple;
   }
   
+
+
+//Attraction Box Styling
+
   .attractionsImage {
     margin: 20px 10px 10px 10px;
     // width: 300px;
@@ -34,6 +41,13 @@
     width: 280px;
     border-radius: 10px;
     border: 2px solid black;
+  }
+
+  .attractionPic {
+    float: right;
+    width: 325px;
+    border-radius: 10px;
+    align-content: center;
   }
 
   .attractionTitle{
@@ -48,12 +62,11 @@
   .attractionDescription{
     font-size: smaller;
     margin-top: 5px;
-    width:100%;
+    width: 100%;
     overflow: hidden;
     display: -webkit-box;
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
-    position: absolute;
     padding-bottom: 2px;
     
   }
@@ -62,43 +75,27 @@
     margin-top: 5px;
   }
 
-
-
-
-
-
   .attractionContent {
-    
     padding-top: 8px;
     float: left;
     width: 225px;
     height: 240px;
-    position: absolute;
     text-overflow: ellipsis;
     overflow: hidden;
-    // font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-family: $primaryFont;
     font-size: large;
     color: black;
    
   }
  
-  .attractionPic {
-    float: right;
-    width: 325px;
-    border-radius: 10px;
-    display: flex;
-    align-content: center;
-  }
+
 }
   .attraction-index-item{
     border-radius: 10px;
   }
 
+
 .attractions-container {
-  background-attachment: fixed;
-  width: 100%;
-  height: 100%; 
   min-height: 100vh; 
   background-color: $BlueGrey;
 
@@ -110,24 +107,15 @@
   }
 }
 
-.attractions-main {  
-
-  map {
-    position: fixed;
-    top: 190px;
-    left: 750px;
-   
-  }
-}
-
-
-.attraction-box {
- width: 100%;
-}
 
 .attraction-box-a {
-  width:45%
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
+
+
+
 
 .AddAttraction {
   display: flex;
